--- a/public/css/template-3.css
+++ b/public/css/template-3.css
@@ -1,148 +1,241 @@
+:root {
+    --space-m: 12px;
+    --space-xm: 16px;
+    --space-l: 24px;
+    --space-b: 36px;
+
+    --size-s: 14px;
+    --size-d: 16px;
+    --size-l: 20px;
+
+    --color-border: #dee2e6;
+    --color-primary: rgb(46, 46, 255);
+    --color-white: #fff;
+    --color-titile: #212529;
+    --color-text: #343a40;
+
+    --border-radius: 12px;
+
+    --weight-title: 500;
+    --weight-text: 400;
+}
+
 .page {
-    background: #FFFFFF;
+    background:var(--color-white);
     padding: 0 15px;
+
+    display: flex;
+    justify-content: center;
 }
 
 .page-content {
     max-width: 960px;
-    margin: 0 auto;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 80px;
 }
 
+/*====================*/
+
 .header {
-    padding: 24px;
+    padding: var(--space-l) 0;
+    border-bottom: 1px solid var(--color-border);
+    
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo {
     font-size: 17px;
+    color: var(--color-white);
+    background:  var(--color-primary);
+    width: 24px;
+    height: 24px;
+
+    border-radius: calc(var(--border-radius) / 2);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.divider {
-    margin: 0;
-    height: 1px;
-    background: #dee2e6; 
-}
 
 .nav {
-display: block;
+display: flex;
+}
+
+.nav-inLine {
+    gap: var(--space-l);
+}
+
+.nav-vertical {
+    gap: var(--space-xm);
+    flex-direction: column;
 }
 
 .nav-link {
-    color: #343a40;
-    font-size: 16px;
+    color: var(--color-text);
+    font-size: var(--size-d);
     text-decoration: none;
+    line-height: 100%;
 }
 
 .nav-link:hover {
 text-decoration: underline;
-color: blue;
-}
-.nav-vertical > .nav-link {
-display: block;
+color: var(--color-primary);
 }
 
-.nav-inLine > .nav-link:not(:last-child) {
-margin-right: 24px;
-}
+ .footer {
+  padding: var(--space-l) 0;
+  border-top: 1px solid var(--color-border);
 
-.nav-vertical > .nav-link:not(:last-child) {
-    margin-bottom: 12px;
-    }
-
-    .header-nav-right {
-        margin-left: auto;
-        width: fit-content;
-    }
-    .page_block:not(:last-of-type){
-        margin-bottom: 80px;
-    }
-    
-    .footer {
-        padding: 24px 0;
-    }
+  display: flex;
+  justify-content: space-between;
+ }
 
     .footer_copyright {
-        font-size: 14px;
-        color: #6c757d;
+        font-size: var(--size-s);
+        color: var(--color-text);
         display: block;
-        margin-top: 12px;
+        margin-top: var(--space-l);
     }
 
     .footer_title {
-        font-size: 20px;
-        color: #212529;
+        font-size: var(--size-l);
+        color: var(--color-titile);
         display: block;
-        margin-bottom: 12px;
+        margin-bottom: var(--space-l);
+
+        font-weight: var(--weight-title);
+    }
+
+    .hero {
+        display: flex;
+        align-items: center;
+        gap: var(--space-b);
+
+        padding: var(--space-b);
+        border-bottom: 1px solid var(--color-border);
+    }
+
+    .hero_image {
+        width: 500px;
+        height: 500px;
+        border-radius: var(--border-radius);
+    }
+
+    .hero_content {
+        display: flex;
+        flex-direction: column;
+        gap: var(--space-l);
     }
 
     .hero_title {
-        font-size: 56px;
-        color: #212529;
-        font-weight: 500;
-        margin-bottom: 12px;
-        text-align: center;
+       font-size: 50px;
+       color: var(--color-titile);
+       font-weight: var(--weight-title);
+       line-height: 120%; 
     }
-
+   
     .hero_text {
-        color: #212529;
-        font-size: 20px;
+        color: var(--color-text);
+        font-size: var(--size-l);
+        font-weight: var(--weight-text);
+        line-height: 170%;
+    }
+  
+    .blog {
+
+        display: flex;
+        gap: var(--space-b);
+
+        padding: var(--space-b);
+        border-bottom: 1px solid var(--color-border);
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         text-align: center;
-        max-width: 585px;
-        margin: 0 auto;
+        gap: var(--space-l);
+
+     }   
+
+    .card_image {
+        height: 140px;
+        width: 140px;
+        border-radius: 50%;
     }
 
-    
+    .card_title {
+        font-size: 32px;
 
-    .plans_card:not(:last-of-type) {
-        margin-right: 24px;
+        font-weight: var(--weight-title);
     }
 
-    .card-header {
-        padding: 12px;
-        text-align: center;
-        font-size: 24px;
-        color: #212529;
+    .card_text {
+        font-weight: var(--weight-text);
+        font-size: var(--size-d);
+        color: var(--color-text);
     }
 
-    .card-body {
-        padding: 24px;
-
-    }
-
-    .card_price_amount {
-        font-size: 40px;
-        color: #212529;
-
-    }
-
-    .card_price_duration {
-        font-size: 29px;
-        color: #6c757d;
-    }
-
-    .card_block {
-        margin-bottom: 24px;
-        text-align: center;
-    }
-
-    .card_block:not(:last-of-type) {
-        margin-bottom: 24px;
-    }
-    
-    .card_description_item {
-        font-size: 16px;
-        color: #212529;
-
-        display: block;
-        
-    }
-
-    .card_description_item:not(:last-of-type) {
-        margin-bottom: 12px;
+    .button {
+        display: inline-block;
+        font-size: var(--size-d);
+        text-decoration: none;
+        padding: var(--space-m) var(--space-xm);
+        border-radius: var(--border-radius);
     }
 
     .card_button {
-        display: block;
-        width: 100%;
-        font-size: 19px;
-        padding: 9px;
+          
+        color: var(--color-white);
+        background-color: var(--color-primary);
+       
     }
+
+    .button :hover {
+        opacity: 0.7;
+    }
+
+    .form {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        background: var(--color-primary);
+        padding: var(--space-l);
+        border-radius: var(--border-radius);
+    }
+
+    .form_content {
+        display: flex;
+        flex-direction: column;
+        gap: var(--space-m);
+    }
+
+    .form_title {
+        font-size: 27px;
+        font-weight: var(--weight-title);
+        color: var(--color-white);
+    }
+
+    .form_info {
+        font-size: var(--weight-text);
+        font-weight: var(--weight-text);
+        color: var(--color-white);
+    }
+
+    .form_button {
+        background-color: var(--color-white);
+        width: 100%;
+        max-width: 160px;
+        color: var(--color-text);
+    }
+
+   
