--- a/src/container/template-3.hbs
+++ b/src/container/template-3.hbs
@@ -1,98 +1,50 @@
-<div class="page">
-    <div class="page-content">
-        <div class="page_block">
-            <header class="header row g-0">
-                <div class="col-3">
-                    {{> logo}}
-                </div>
+<header class="header">
+    <div>
+        {{> logo}}
+    </div>
 
-                <nav class="header-nav col-9">
-                    <div class="header-nav-right">
-                        {{>nav list=header}}
-                    </div>
-                </nav>
-            </header>
-            {{>divider }}
+    <nav class="header-nav col-9">
+        <div class="header-nav-right">
+            {{>nav list=header}}
         </div>
-        <div class="page_block">
-            <div class="hero">
-                {{#with hero}}
-                {{>hero title=title text=text}}
-                <a class="button" href="{{button.url}}">{{button.text}}</a>
-                {{/with}}
-            </div>
-        </div>
-
-        <div class="page_block">
-            <div class="row g-4">
-                {{#each preview}}
-                <div class="col-6">
-                    {{> cardPreview data=this}}
-                </div>
-                {{/each}}
-            </div>
-        </div>
-
-        <div class="page_block">
-            <main class="main">
-
-                <div class="row g-0">
-                    <div class="col-12">
-                        <div class="list_header">
-                            <div class="row g-0">
-                                <div class="col-6">
-                                    <h2 class="list_title">List of post</h2>
-                                </div>
-                                <div class="col-6">
-                                    <div class="category_list">
-                                        {{#each categories}}
-                                        <button class="category_button">{{text}}</button>
-                                        {{/each}}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-7">
-                        <div class="list">
-                            {{#each news}}
-                            {{> cardPost data=this}}
-                            {{/each}}
-                        </div>
-                    </div>
-                    <div class="col-5">
-                        <aside class="list_aside">
-                            <div class="about">
-                                <h4 class="about_title">About</h4>
-                                <p class="about_text">{{about}}</p>
-                            </div>
-                            {{> linkList data=archive title="Archives"}}
-
-                            {{> linkList data=social title="Social"}}
-                        </aside>
-                    </div>
-                </div>
-
-
-
-                <div class="page_block">
-                    {{>divider }}
-                    <footer class="row footer">
-                        <div class="col-3">
-                            {{> logo}}
-                            <span class="footer_copyright"> Copyright 2023-2024</span>
-
-                        </div>
-
-                        {{#each footer}}
-                        <div class="col-3">
-                            <span class="footer_title">{{title}}</span>
-                            {{> nav list=links isVertical=true}}
-                        </div>
-                        {{/each}}
-
-                    </footer>
-                </div>
-        </div>
+    </nav>
+</header>
+{{#with hero}}
+<div class="hero">
+    <div class="hero_content">
+        <h1 class="hero_title">{{title}}</h1>
+        <p class="hero_text">{{text}}</p>
+    </div>
+    <img src="{{photo}}" alt="hero image" class="hero_image">
+</div>
+{{/with}}
+<main class="blog">
+    {{#each blog}}
+    {{>cardBlog data=this}}
+    {{/each}}
+</main>
+{{#with form}}
+<div class="form">
+    <div class="form_content">
+        <h3 class="form_title">{{title}}</h3>
+        <p class="form_info">{{info}}</p>
+    </div>
+    <div class="form_action">
+        <a class="button form_button" href="{{href}}">{{button}}</a>
     </div>
 </div>
+{{/with}}
+<footer class="footer">
+    <div>
+        {{> logo}}
+        <span class="footer_copyright"> Copyright 2023-2024</span>
+    </div>
+
+    {{#each footer}}
+    <div>
+        <span class="footer_title">{{title}}</span>
+        {{> nav list=links isVertical=true}}
+    </div>
+    {{/each}}
+
+</footer>
