--- a/src/container/template-4.hbs
+++ b/src/container/template-4.hbs
@@ -9,31 +9,32 @@
     </nav>
 </header>
 {{#with main}}
-<div class="hero">
+<main class="hero">
     <img src="{{image}}" alt="hero image" class="hero_image">
     <div class="hero_content">
         <h1 class="hero_title">{{heading}}</h1>
         <p class="hero_text">{{description}}</p>
         <a class="button form_button" href="{{href}}">{{button}}</a>
     </div>
-</div>
+</main>
 {{/with}}
-<main class="blog">
-    {{#each blog}}
+
+<div class="featured">
+    {{#each featured}}
     {{>cardBlog data=this}}
     {{/each}}
-</main>
-{{#with form}}
-<div class="form">
-    <div class="form_content">
-        <h3 class="form_title">{{title}}</h3>
-        <p class="form_info">{{info}}</p>
-    </div>
-    <div>
-        <button class="button-hero form_button" href="{{href}}">{{button}}</button>
-    </div>
 </div>
-{{/with}}
+<div class="actions">
+    {{#each actions}}
+    <div class="form_content">
+
+        <h3 class="form_title">{{heading}}</h3>
+
+        <a class="button-hero form_button" href="{{url}}">{{text}}</a>
+    </div>
+    {{/each}}
+</div>
+
 <footer class="footer">
     <div>
         {{> logo}}
