--- a/public/css/template-4.css
+++ b/public/css/template-4.css
@@ -14,7 +14,7 @@
     --color-titile: #212529;
     --color-text: #343a40;
 
-    --border-radius: 12px;
+    --border-radius-d: 12px;
 
     --weight-title: 500;
     --weight-text: 400;
@@ -55,7 +55,7 @@
     width: 24px;
     height: 24px;
 
-    border-radius: calc(var(--border-radius) / 2);
+    border-radius-d: calc(var(--border-radius-d) / 2);
 
     display: flex;
     justify-content: center;
@@ -124,7 +124,7 @@ color: var(--color-primary);
     .hero_image {
         width: 500px;
         height: 500px;
-        border-radius: var(--border-radius);
+        border-radius-d: var(--border-radius-d);
     }
 
     .hero_content {
@@ -168,7 +168,7 @@ color: var(--color-primary);
     .card_image {
         height: 64px;
         width: 64px;
-        border-radius: var(--border-radius);
+        border-radius-d: var(--border-radius-d);
     }
 
     .card_title {
@@ -197,7 +197,7 @@ color: var(--color-primary);
         
         background: #563D7C;
         padding: var(--space-l);
-        border-radius: 8px;
+        border-radius-d: 8px;
     }
 
     .form_content {
@@ -222,7 +222,7 @@ color: var(--color-primary);
         height: 100%;
         max-height: 52px;
         color: var(--color-text);
-        border-radius: 5px;
+        border-radius-d: 5px;
         padding-left: 16px;
         padding-right: 16px;
         padding-top: 10px;
