--- a/public/css/slack.css
+++ b/public/css/slack.css
@@ -1,9 +1,69 @@
 @font-face {
-    font-family: "HelveticaNeueBold";
-    src: url("/font/HelveticaNeueBold.ttf") format("ttf");
+    font-family: 'HelveticaNeueBold';
+    src: url('/font/HelveticaNeueBold.ttf');
+    font-weight: 600; 
 }
 
 body {
-    font-family:"HelveticaNeuBold";
+    font-family:'HelveticaNeuBold', 'sans-serif';
+}
+
+:root { 
+    --color-white:#FFFFFF;
+
+--page-width-big: 1260px;
+--page-width-medium: 1000px;
+--page-width-small: 700px;
+
+--spacing-1: 8px;
+--spacing-2: 12px;
+--spacing-3: 16px;
+--spacing-4: 20px;
+--spacing-5: 24px;
+--spacing-6: 28px;
+}
+
+.page {
+    display: grid;
+}
+
+.page_section {
+    display: flex;
+    justify-content: center;
+}
+
+.page-content {
+    width: 100%;
+
+    padding: var(--spacing-3);
+    
+}
+
+@media all and (1260 <= width) {
+    .page-content {
+        max-width: var(--page-width-big);
+    }
+}
+
+@media all and (1000px <= width < 1260px) {
+    .page-content {
+        max-width: var(--page-width-medium);
+    }
+}
+
+@media all and (width < 1000px) {
+    .page-content {
+        max-width: var(--page-width-small);
+    }
+}
+
+.hero_section {
+    display: grid;
+    gap: 35px;
+}
+
+.hero {
+    display: grid;
+    gap: var(--spacing-4);
 }
 
