--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -18,16 +18,29 @@
 
     <link href='css/normalize.css' rel='stylesheet' />
 
-    <link href='slack.css' rel='stylesheet' />
+    <link href='css/slack.css' rel='stylesheet' />
 
 </head>
 
 <body>
     <div class="page">
-        <div class="page-content">
-            Test
-        </div>
+        <section class="page_section">
+            <div class="page-content hero_section">
+                <div class="hero">
+                    <span class="hero_label">Slack Features</span>
+                    <h1 hero_title>One platform for your team and your work</h1>
+                    <p class="hero_info">All the features of Slack work together so you can, too.</p>
+                    <div class="hero_buttons">
+                        <a href="#" class="button button_primary">Try of free</a>
+                        <a href="#" class="button button_secondary">See all features</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
+
+
+
 </body>
 
 </html>
