--- a/public/css/slack.css
+++ b/public/css/slack.css
@@ -1,3 +1,5 @@
+@layer normalize, component, variant, main, adaptive;
+
 @font-face {
     font-family: 'HelveticaNeueBold';
     src: url('/font/HelveticaNeueBold.ttf');
@@ -5,15 +7,19 @@
 }
 
 body {
-    font-family:'HelveticaNeuBold', 'sans-serif';
+    font-family:'HelveticaNeuBold', sans-serif;
 }
 
 :root { 
     --color-white:#FFFFFF;
+    --color-black:#000;
+    --color-primary: #611f69; 
+    --color-light: #f4ede4;
 
---page-width-big: 1260px;
+--page-width-bim: 1px;   
 --page-width-medium: 1000px;
 --page-width-small: 700px;
+--page-width-big: 1260px;
 
 --spacing-1: 8px;
 --spacing-2: 12px;
@@ -21,49 +27,427 @@ body {
 --spacing-4: 20px;
 --spacing-5: 24px;
 --spacing-6: 28px;
+--spacing-7: 32px;
+--spaicing-8: 36px;
+
+--size-1: 14px;
+--size-2: 18px;
+--size-3: 22px;
+--size-4: 26px;
+--size-5: 30px;
+--size-6: 34px;
+
+--radius-1: 4px;
+
+--opacity-1: 0.7;
+--opacity-2: 0.3;
+--transition-1: 0.7s;
+
+--line-height: 1.5 em;
 }
+
+@layer component {
+    .page_section {
+        display: flex;
+        justify-content: center;
+    }
+    .button { 
+        text-decoration: none;
+        color: var(--color-black);
+        padding: var(--spacing-2);
+        border-radius: var(--radius-1);
+        text-align: center;
+        border: 1px solid transparent;
+           
+       }
+       
+       .click {
+           transition: opacity var(--transition-1);
+       }
+       
+       .click:hover {
+           opacity: 0.7;
+           cursor: pointer;
+       }
+       
+       .click:active {
+           opacity: var(--opacity-2);
+       }
+
+       .icon {
+        display: block;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }    
+
+    .double_line {
+        line-height: var(--line-height);  
+      }
+    
+    }
+
+    @layer variant {
+        .button_primary {
+            color: var(--color-white);
+            background-color: var(--color-primary);
+            
+        }
+    
+        .button_secondary {
+            color: var(--color-primary);
+            border-color: var(--color-primary);
+            border-width: 2px;
+            
+        }
+        
+        .page_section_light {
+            background-color: var(--color-light);
+        }
+
+        .feat_icon {
+            height: 48px;
+            width: 48px;   
+        }
+    
+        .icon_arrow {
+            height: 14px;
+            width: 24px;
+            background-image: url('/svg/feature/arrow-right.svg');
+        }
+
+        
+        }
+     @layer main {
+    .page-content {
+        width: 100%;
+    
+        padding: var(--spacing-3);        
+    }
+        
 
 .page {
     display: grid;
-}
-
-.page_section {
-    display: flex;
-    justify-content: center;
-}
-
-.page-content {
-    width: 100%;
-
-    padding: var(--spacing-3);
     
 }
 
-@media all and (1260 <= width) {
-    .page-content {
-        max-width: var(--page-width-big);
-    }
-}
-
-@media all and (1000px <= width < 1260px) {
-    .page-content {
-        max-width: var(--page-width-medium);
-    }
-}
-
-@media all and (width < 1000px) {
-    .page-content {
-        max-width: var(--page-width-small);
-    }
-}
-
 .hero_section {
-    display: grid;
-    gap: 35px;
-}
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
+    gap: 200px;
+    position: relative;
+
+    
+    min-height: 600px;
+}
 .hero {
-    display: grid;
-    gap: var(--spacing-4);
+    display: flex;
+    height: 100%;
+    align-content: center;
+    margin-top: 50px;
 }
 
+.hero_content {
+display: grid;
+gap: var(--spacing-5);
+max-width: 425px;
+color: var(--color-black);
+position: relative;
+
+}
+
+.brands {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: var(--spaicing-8);
+    row-gap: var(--spaicing-4);
+    flex-wrap: wrap;
+}
+
+.hero_image {
+    position: absolute;
+    left: 580px;
+    top: 0;
+    
+}
+
+.hero_label {
+    font-size: var(--size-1);
+}
+
+.hero_title {
+    font-size: 50px;
+}
+
+.hero_info {
+    font-size: var(--size-2);
+}
+
+.hero_buttons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: var(--spacing-5);
+}
+
+
+.features_section {
+    padding-top: 150px;
+    padding-bottom: 150px;
+
+    display: grid;
+    gap: var(--spacing-5);
+
+    background-image: url('/svg/feature/easily.png');
+    background-repeat: no-repeat;
+    background-position: top right;
+
+}
+
+.features_section_2 {
+    
+    padding-bottom: 150px;
+    
+    display: grid;
+    gap: var(--spacing-5);
+
+    background-image: url('/img/img-what-you-need.jpg.png');
+    background-repeat: no-repeat;
+    background-position: top left;
+
+}
+
+.features_title {
+    font-size: var(--size-6);
+}
+
+.features_title_2 {
+    font-size: var(--size-6);
+    margin-left: auto;
+}
+
+.features_description {
+    font-size: var(--size-2);
+    max-width: 520px;
+    line-height: var(--line-height);
+}
+
+.features_description_2 {
+    font-size: var(--size-2);
+    max-width: 520px;
+    line-height: var(--line-height);
+    margin-left: auto;
+    padding-bottom: 70px;
+}
+
+.feat_card {
+ padding: var(--spacing-3);
+ background-color: var(--color-white);
+ display: grid;
+ gap: var(--spacing-3);
+
+ font-size: var(--size-2);
+ line-height: var(--line-height);
+
+ grid-template-rows: min-content min-content 1fr min-content;
+
+}
+
+.feat_link {
+    justify-self: flex-end;
+}
+
+.features_grid_4 {
+    display: grid;
+
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    gap: var(--spacing-3);
+}
+
+.features_grid_4 > .feat_card:first-of-type {
+    grid-row: 1 / 3;
+    
+}
+
+.features_grid_3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: var(--spacing-5);
+    margin-left: 300px   
+}
+
+.features_grid_3 > :nth-last-child(-n + 2) {
+      
+    grid-row: 3 / 1;
+}
+ 
+.deliveroo_section {
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    margin-top: 72px;   
+    
+    } 
+.deliveroo_image {
+    max-width: 556px;
+    max-height: 228px;
+    padding-right: 38px;
+ }
+
+
+.deliveroo_text {
+   
+    line-height: var(--size-5);
+    font-size: var(--size-5);
+    max-width: 433px;
+    
+}
+
+.deliveroo_grid_2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    
+    gap: var(--spacing-5);
+      
+}
+.deliveroo_content_2 {
+    max-width: 433px;
+    max-height: 359px;
+    margin-bottom: 155px;
+    
+ } 
+
+ .deliveroo_logo {
+    width: 170px;
+    height: 80px;
+    padding-bottom: var(--size-5);
+    padding-top: var(--size-2);
+ }
+
+ .deliveroo_text_2 {
+    font-size: var(--size-1);
+
+ }
+
+
+.explore_grid_3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: 75px;
+    margin-left: 200px;
+    margin-right: 200px;
+        
+}
+
+.explore_title {
+    font-size: var(--size-5);
+    margin-left: 45%;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+.explore_content {
+    max-width: var(--page-width-medium);
+    max-height: 500px;
+    margin-bottom: 80px;
+}
+
+.explore_text_3 {
+font-size: 14px;
+padding-left: var(--spacing-1);
+padding-bottom: var(--spacing-1);
+}
+
+.explore_text_4 {
+    font-size: 20px;
+    font-weight: bold;
+    line-height: var(--size-5);
+    padding-bottom: var(--size-3);
+}
+
+.explore_link {
+    color: #1264A3;
+}
+
+.feat_card_1 {
+
+    background-color: var(--color-white);
+    display: grid;
+    filter: drop-shadow(0 0 0.75rem rgb(198, 194, 196));
+    padding: 8px;
+    
+      }
+
+      .explore_link {
+        text-decoration: none;
+      }
+    }
+
+@layer adaptive {
+    @media all and (1260px <= width) {
+        .page-content {
+            max-width: var(--page-width-big);
+        }
+    }
+    
+    @media all and (1000px <= width < 1260px) {
+        .page-content {
+            max-width: var(--page-width-medium);
+        }
+
+        .hero_image {
+           left: 518px;
+           height: 300px; 
+        }
+    }
+    
+    @media all and (width < 1000px) {
+        .page-content {
+            max-width: var(--page-width-small);
+        }
+
+        .hero_image {
+            position: static;
+            width: 100%;
+            order: -1;
+        }
+
+        .hero_content {
+            max-width: 100%;
+        }
+
+        .features_grid_4 > .feat_card:first-of-type {
+            grid-row: 1 / 3;
+        }  
+
+        .features_section {
+            background: none;
+        }
+    }
+
+
+      @media all and (width < 600px){
+        
+        .features_grid_4 {
+           grid-template-columns: 2fr 2fr;
+        }
+      }
+
+    @media all and (width < 400px){
+        
+        .features_grid_4 {
+           grid-template-columns: 1fr;
+        }
+            
+        .hero_buttons {
+            grid-template-columns: 1fr;
+            gap: var(--spacing-2);
+        }
+    }
+}
