--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -6,7 +6,6 @@
         Slack page
     </title>
     <meta charset='utf-8' />
-
     <link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
@@ -14,12 +13,10 @@
     <link rel="mask-icon" href="/fav/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
-
     <link href='css/normalize.css' rel='stylesheet' />
-
     <link href='css/slack.css' rel='stylesheet' />
-
+    <meta name="viewport"
+        content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 
 <body>
@@ -27,20 +24,172 @@
         <section class="page_section">
             <div class="page-content hero_section">
                 <div class="hero">
-                    <span class="hero_label">Slack Features</span>
-                    <h1 hero_title>One platform for your team and your work</h1>
-                    <p class="hero_info">All the features of Slack work together so you can, too.</p>
-                    <div class="hero_buttons">
-                        <a href="#" class="button button_primary">Try of free</a>
-                        <a href="#" class="button button_secondary">See all features</a>
+                    <div class="hero_content">
+                        <span class="hero_label">Slack Features</span>
+                        <h1 class="hero_title">One platform for your team and your work</h1>
+                        <p class="hero_info double_line">All the features of Slack work together so you can, too.</p>
+                        <div class="hero_buttons">
+                            <a href="#" class="button button_primary click">Try of free</a>
+                            <a href="#" class="button button_secondary click">See all features</a>
+                        </div>
+                        <img src="/svg/feature/hero-full-ui.jpg.png" alt="Hero" class="hero_image">
+                    </div>
+                </div>
+                <div class="brands">
+                    <img src="img/brands/airbnb.png" alt="brands" class="brands_image">
+                    <img src="img/brands/intuit.png" alt="brands" class="brands_image">
+                    <img src="img/brands/newscorp.png" alt="brands" class="brands_image">
+                    <img src="img/brands/onemedical.png" alt="brands" class="brands_image">
+                    <img src="img/brands/sonos.png" alt="brands" class="brands_image">
+                    <img src="img/brands/uber.png" alt="brands" class="brands_image">
+                    <img src="img/brands/va.png" alt="brands" class="brands_image">
+
+                </div>
+            </div>
+        </section>
+        <section class="page_section page_section_light">
+            <div class="page-content features_section">
+                <h2 class="features_title">Work more easily with everyone</h2>
+                <p class="features_description double_line">Stay on the same page and make decisions faster by bringing
+                    all of your
+                    work communication into one place.</p>
+                <div class="features_grid_4">
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/connect.svg');"></span>
+                        <strong class="feat_card_title">Slack Connect</strong>
+                        <p class="feat_card_description double_line">Collaborate with teams at other companies the same
+                            way you do
+                            with
+                            teams at your own/</p>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/huddles.svg');"></span>
+                        <strong class="feat_card_title">Huddles</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/messaging.svg');"></span>
+                        <strong class="feat_card_title">Messaging</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/accessibility.svg');"></span>
+                        <strong class="feat_card_title">Accessibility</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/channels.svg');"></span>
+                        <strong class="feat_card_title">Channels</strong>
+                        <a href="'/" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/canvas.svg');"></span>
+                        <strong class="feat_card_title">Canvas</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/clips.svg');"></span>
+                        <strong class="feat_card_title">Clips</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page_section page_section_light">
+            <div class="page-content features_section_2">
+                <h2 class="features_title_2">What you need, when you need it</h2>
+                <p class="features_description_2 double_line">SSpend less time shuffling tabs with a comprehensive
+                    message archive and
+                    all your work tools at your fingertips.</p>
+                <div class="features_grid_3">
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/search.svg');"></span>
+                        <strong class="feat_card_title">Search</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/sharing.svg');"></span>
+                        <strong class="feat_card_title">File Sharing</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/apps.svg');"></span>
+                        <strong class="feat_card_title">Apps and Integrations</strong>
+                        <p class="feat_card_description double_line">Streamline work by connecting
+                            Slack with other services like
+                            Google Drive, Office 365 and
+                            over 2,200 more.</p>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/builder.svg');"></span>
+                        <strong class="feat_card_title">Workflow Builder</strong>
+                        <p class="feat_card_description double_line">Automate routine actions and
+                            communication, so you can get
+                            back to the kind of work only
+                            humans can do.</p>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page_section">
+            <div class="page_content deliveroo_section deliveroo_grid_2">
+                <img src="/img/img-deliveroo.jpg.png" alt="deliveroo" class="deliveroo_image">
+                <div class="deliveroo_content_2">
+                    <span class="deliveroo_text">“The thing that keeps us connected
+                        the most is Slack. It’s a very
+                        immediate and straightforward
+                        method of communication, and
+                        really the only channel that people
+                        prefer and enjoy using.”</span>
+                    <div><img src="/img/deliveroo.png" alt="deliveroo" class="deliveroo_logo"></div>
+                    <p>Will Sprunt, CIO, Deliveroo</p>
+                </div>
+            </div>
+        </section>
+        <section class="explore">
+            <div class="explore_content">
+                <h2 class="explore_title">Explore more about working in Slack</h2>
+                <div class="explore_grid_3">
+                    <div class="feat_card_1">
+                        <img src="/img/slack-101.png">
+                        <p class="explore_text_3">Slack Tutorials</p>
+                        <strong class="explore_text_4">Slack 101</strong>
+                        <a href="#" class="explore_link">Learn more</a>
+                        <a href="#" class="icon_arrow click feat_link color_arrow"></a>
+                    </div>
+
+                    <div class="feat_card_1">
+                        <img src="/img/email-promo.png">
+                        <p class="explore_text_3">Slack vs. Email</p>
+                        <strong class="explore_text_4">An easier, more
+                            organized way to work</strong>
+                        <a href="#" class="explore_link">Learn more</a>
+                        <a href="#" class="icon_arrow click feat_link"></a>
+                    </div>
+                    <div class="feat_card_1">
+                        <img src="/img/customer_promo.png">
+                        <p class="explore_text_3">Customer Stories</p>
+                        <strong class="explore_text_4">How Fastly uses Slack
+                            Connect to wow
+                            enterprise customers</strong>
+                        <a href="#" class="explore_link">Learn more</a>
+                        <a href="#" class="icon_arrow click feat_link color_arrow"></a>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-
-
-
 </body>
-
-</html>
