--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -1,6 +1,5 @@
-
-
-/* Document
+@layer normalize {
+    /* Document
    ========================================================================== */
 
 /**
@@ -929,4 +928,4 @@ input:-webkit-autofill {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-
+}
